--- a/app/src/main/res/layout/milestone_item_row.xml
+++ b/app/src/main/res/layout/milestone_item_row.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="0dp"
+    app:cardCornerRadius="12dp"
+    android:layout_marginHorizontal="4dp"
+    android:layout_marginVertical="8dp"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp"
-        >
+        android:padding="16dp">
+
         <ImageView
-            android:id="@+id/ic_check"
+            android:id="@+id/iv_badges"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            app:srcCompat="@drawable/icon_accept_disabled"/>
-
-        <TextView
-            android:id="@+id/tv_milestone"
-            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/sample_badges" />
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/milestone_title"
-            style="@style/TextContent.Description"/>
-    </LinearLayout>
-
+            android:orientation="vertical"
+            android:paddingVertical="16dp"
+            android:paddingStart="16dp"
+            app:layout_constraintStart_toEndOf="@id/iv_badges"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+            <TextView
+                android:id="@+id/tv_badges_name"
+                style="@style/TextContent.TitleSecondaryBlack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Badges Name"
+                />
+            <TextView
+                android:id="@+id/tv_badges_descriptions"
+                style="@style/TextContent.Description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Descriptions"
+                />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
