--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_plan"
         android:icon="@drawable/nav_progress"
-        android:title="@string/title_plan" />
+        android:title="@string/title_milestone" />
 
     <item
         android:id="@+id/placeholder"
