--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,36 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="194"
+    android:viewportHeight="194">
+  <path
+      android:pathData="M1,1h192v192h-192z"
+      android:strokeLineJoin="bevel"
+      android:strokeWidth="0.444444"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M84.11,56.24C90.73,58.46 89.99,67.1 88.8,71.15C89.3,73.11 90.17,77.45 89.56,79.12C88.95,80.78 89.81,89.52 90.32,93.68C94.24,118.99 73.22,138.98 58.63,130.08C44.04,121.18 49.92,110.32 53.95,90.67C57.17,74.96 64.66,64.79 68,61.67C70.61,58.93 77.49,54.02 84.11,56.24Z"
+      android:fillColor="#6FBF64"/>
+  <path
+      android:pathData="M109.41,56.26C102.79,58.48 103.53,67.12 104.73,71.16C104.22,73.13 103.36,77.47 103.96,79.14C104.57,80.8 103.71,89.54 103.2,93.7C99.28,119 120.3,138.99 134.89,130.1C149.48,121.2 143.6,110.34 139.57,90.69C136.35,74.98 128.86,64.81 125.53,61.69C122.91,58.95 116.03,54.04 109.41,56.26Z"
+      android:fillColor="#6FBF64"/>
+  <path
+      android:pathData="M94.27,64.23C95.23,60.72 94.67,51.06 94.27,46.67C96.2,46.28 99.94,45.74 99.5,46.67C98.96,47.82 99.5,63.31 99.5,64.23C102.2,75.88 115.51,82.41 121.82,84.22C119.99,85.61 114.09,83.64 111.37,82.49C113.29,92.93 122.77,98.86 127.27,100.51C116.29,101.62 109.7,87.8 107.78,80.75C102.64,78.72 98.52,72.36 97.1,69.43C93.45,75.07 87.59,79.33 85.13,80.75C82.08,95.73 71.66,100.17 66.83,100.51C76.07,97.56 81.06,86.73 82.4,81.68C79.53,83.16 74.53,83.37 72.39,83.3C90.35,75.79 93.08,68.62 94.27,64.23Z"
+      android:fillColor="#599950"/>
+  <path
+      android:pathData="M109.63,147.66C108.58,148.12 102.8,147.85 100.04,147.66C101.9,147.66 104.18,145.35 107.67,140.73C110.45,137.03 115.65,137.03 117.9,137.49C116.16,145.35 110.93,147.08 109.63,147.66Z"
+      android:fillColor="#599950"/>
+  <path
+      android:pathData="M107.67,135.76C106.8,137.7 100.77,143.81 97.87,146.62C97.34,131.92 104.84,128.09 108.65,128.02C108.97,132.29 108.76,133.33 107.67,135.76Z"
+      android:fillColor="#599950"/>
+  <path
+      android:pathData="M96.78,117.04C99.65,119.24 103.66,125.64 96.78,133.68C93.95,130.56 89.98,122.86 96.78,117.04Z"
+      android:fillColor="#599950"/>
+  <path
+      android:pathData="M84.15,147.55C85.19,148.01 90.97,147.74 93.73,147.55C91.88,147.55 89.59,145.24 86.11,140.61C83.32,136.91 78.12,136.91 75.87,137.38C77.61,145.24 82.84,146.97 84.15,147.55Z"
+      android:fillColor="#599950"/>
+  <path
+      android:pathData="M86.11,135.64C86.98,137.59 93,143.69 95.91,146.51C96.43,131.81 88.94,127.98 85.13,127.9C84.8,132.18 85.02,133.22 86.11,135.64Z"
+      android:fillColor="#599950"/>
 </vector>
