--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:theme="@style/Theme.MaterialComponents.Light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/nav_cig"
+        android:src="@drawable/ismoke_icon"
         app:maxImageSize="32dp"
         app:tint="@null"
         app:backgroundTint="@color/accent_yellow"
