--- a/app/src/main/res/layout/fragment_hold_breath.xml
+++ b/app/src/main/res/layout/fragment_hold_breath.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@color/accent_white"
     tools:context=".ui.healtimprovement.holdbreath.screen.HoldBreathFragment">
 
     <TextView
